# LumenRoom

./: .gitignore  List of keyboard shortcuts.txt  PROJECT_STATUS.md  README.md  ROADMAP.md  THIRD-PARTY-LICENSES.md  index.html  package-lock.json  package.json  vite.config.ts
ci/: check-marks.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_presets.sql  0003_organize.sql  0004_smart.sql
src-tauri/src/: cli.rs  error.rs  lib.rs  main.rs  prefs.rs  protocol.rs
src-tauri/src/catalog/: autoimport.rs  export.rs  mod.rs  organize.rs  presets.rs  scan.rs  sidecar.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/imaging/: ai.rs  lensdb.rs  metadata.rs  mod.rs  pipeline.rs  raw.rs  thumbnail.rs
src/api/: commands.ts  protocol.ts
src/components/: ContextMenu.tsx  InfoOverlay.tsx  PanelSection.tsx  SettingsModal.tsx  ShortcutsOverlay.tsx  Slider.tsx  ZoomPane.tsx
src/features/develop/: CropOverlay.tsx  DevelopLeftPanels.tsx  DevelopRightPanels.tsx  DevelopView.tsx  ExportButton.tsx  ImageCanvas.tsx  ImportXmpButton.tsx  MaskOverlay.tsx  SidecarButton.tsx  SpotOverlay.tsx  calibration.ts  curve.ts  hsl.ts  profiles.ts
src/features/develop/gl/: Renderer.ts
src/features/develop/histogram/: Histogram.tsx  histogramBus.ts  plot.ts
src/hooks/: keymap.ts  useKeyboardShortcuts.ts
src/store/: catalogStore.ts  developStore.ts  uiStore.ts  zoomStore.ts
src/styles/: global.css  theme.css
src/types/: models.ts
(+14 files in other folders)
