[package]
name = "lumenroom"
version = "0.1.0"
description = "A lightweight, Linux-first, non-destructive RAW photo editor"
authors = ["LumenRoom"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lumenroom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (bundled SQLite, pooled for concurrent workers)
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Imaging
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "tiff",
    "webp",
] }
kamadak-exif = "0.5"
# Full RAW demosaic (optional slow path; embedded previews stay the default)
rawler = "0.6"

# Text rasterization (export watermarks)
ab_glyph = "0.2"

# File watching (Auto-Import)
notify = "6"

# Concurrency / utilities
rayon = "1.10"
walkdir = "2"
blake3 = "1.5"
thiserror = "1"
chrono = "0.4"
directories = "5"
base64 = "0.22"
tract-onnx = "0.21.16"
ureq = "3.2.1"
prost = "0.11"
quick-xml = "0.36"
include_dir = "0.7.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
